--- a/app/assets/sass/forms.sass
+++ b/app/assets/sass/forms.sass
@@ -10,3 +10,6 @@ input[type="date"]
     appearance: none
     -moz-appearance: none
     -webkit-appearance: none
+    background: url('/images/chevron-down-black.svg') center no-repeat
+    background-position-x: 97%
+    background-size: 10px 10px
