--- a/app/assets/sass/forms.sass
+++ b/app/assets/sass/forms.sass
@@ -13,3 +13,4 @@ input[type="date"]
     background: #FFFFFF url('/images/date-icon.svg') center no-repeat
     background-position-x: 97%
     background-size: 10px 10px
+    text-align: left
