--- a/app/assets/sass/forms.sass
+++ b/app/assets/sass/forms.sass
@@ -6,11 +6,16 @@ select
     background-position-x: 97%
     background-size: 10px 10px
 
+
 input[type="date"]
     appearance: none
     -moz-appearance: none
     -webkit-appearance: none
     background: #FFFFFF url('/images/date-icon.svg') center no-repeat
     background-position-x: 97%
-    background-size: 10px 10px
+    background-size: 20px 20px
     text-align: left
+
+input[type="date"]::-webkit-calendar-picker-indicator
+    display: none
+    -webkit-appearance: none
