--- a/app/assets/sass/forms.sass
+++ b/app/assets/sass/forms.sass
@@ -17,5 +17,9 @@ input[type="date"]
     text-align: left
 
 input[type="date"]::-webkit-calendar-picker-indicator
-    display: none
-    -webkit-appearance: none
+    opacity: 0
+    position: absolute
+    right: 0
+    width: 100%
+    height: 100%
+    cursor: pointer
