--- a/app/assets/sass/forms.sass
+++ b/app/assets/sass/forms.sass
@@ -8,6 +8,7 @@ select
 
 
 input[type="date"]
+    position: relative
     appearance: none
     -moz-appearance: none
     -webkit-appearance: none
@@ -17,8 +18,8 @@ input[type="date"]
     text-align: left
 
 input[type="date"]::-webkit-calendar-picker-indicator
-    opacity: 0
     position: absolute
+    opacity: 0
     right: 0
     width: 100%
     height: 100%
