--- a/app/assets/sass/fonts.sass
+++ b/app/assets/sass/fonts.sass
@@ -3,12 +3,14 @@
   src: url("assets/fonts/Aeonik-Black.woff2") format("woff2"), url("assets/fonts/Aeonik-Black.woff") format("woff")
   font-weight: normal
   font-style: normal
+  font-display: swap
 
 @font-face
   font-family: "Aeonik-Bold"
   src: url("assets/fonts/Aeonik-Bold.woff2") format("woff2"), url("assets/fonts/Aeonik-Bold.woff") format("woff")
   font-weight: normal
   font-style: normal
+  font-display: swap
 
 
 @font-face
@@ -16,6 +18,7 @@
   src: url("assets/fonts/Aeonik-Medium.woff2") format("woff2"), url("assets/fonts/Aeonik-Medium.woff") format("woff")
   font-weight: normal
   font-style: normal
+  font-display: swap
 
 
 @font-face
@@ -23,6 +26,7 @@
   src: url("assets/fonts/Aeonik-MediumItalic.woff2") format("woff2"), url("assets/fonts/Aeonik-MediumItalic.woff") format("woff")
   font-weight: normal
   font-style: normal
+  font-display: swap
 
 
 @font-face
@@ -30,3 +34,4 @@
   src: url("assets/fonts/Aeonik-Regular.woff2") format("woff2"), url("assets/fonts/Aeonik-Regular.woff") format("woff")
   font-weight: normal
   font-style: normal
+  font-display: swap
